# image-recognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/image_recognition/: main.py
src/image_recognition/api/v1/: api_v1.py
src/image_recognition/api/v1/endpoints/: image_processing.py
src/tests/: test_main.py
